--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,14 @@
 [package]
 name = "rust-embedded-application-model"
+authors = ["StephenVanWijk <stephenvanwijk6@gmail.com>"]
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xc"] }
+cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
+cortex-m-rt = "0.7.3"
+defmt = "1.0.0"
+defmt-rtt = "1.0"
+panic-probe = { version = "1.0", features = ["print-defmt"] }
+cortex-m-semihosting = "0.5.0"
