--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,18 @@ authors = ["StephenVanWijk <stephenvanwijk6@gmail.com>"]
 version = "0.1.0"
 edition = "2024"
 
+# [dependencies]
+# stm32f3xx-hal = { version = "0.10.0", features = ["stm32f303xc"] }
+# cortex-m = "0.7.5"
+# cortex-m-rt = "0.7.5"
+# panic-itm = "0.4.2"
+# stm32f3-discovery = "0.7.2"
+
 [dependencies]
-stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xc"] }
-cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
-cortex-m-rt = "0.7.3"
-defmt = "1.0.0"
-defmt-rtt = "1.0"
-panic-probe = { version = "1.0", features = ["print-defmt"] }
-cortex-m-semihosting = "0.5.0"
+cortex-m = "0.6.4"
+cortex-m-rt = "0.6.13"
+stm32f3-discovery = "0.5.0"
+panic-itm = "0.4.2"
+
+[build-dependencies]
+rustc_version = "0.4"  # Needed by stm32f3xx-hal's build script
