--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,20 @@ edition = "2024"
 # panic-itm = "0.4.2"
 # stm32f3-discovery = "0.7.2"
 
+# [dependencies]
+# cortex-m = "0.6.7"
+# cortex-m-rt = "0.6.15"
+# cortex-m-semihosting = "0.3.3"
+# panic-itm = "0.4.2"
+# stm32f3-discovery = "0.7.2"
+
+# { version = "0.5.0", features = ["stm32f303", "rt"] }
+
 [dependencies]
 cortex-m = "0.6.4"
-cortex-m-rt = "0.6.13"
+cortex-m-rt = "0.6.14"
 stm32f3-discovery = "0.5.0"
 panic-itm = "0.4.2"
 
 [build-dependencies]
-rustc_version = "0.4"  # Needed by stm32f3xx-hal's build script
+# rustc_version = "0.4"  # Needed by stm32f3xx-hal's build script
