--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ cortex-m-rt = "0.6.14"
 stm32f3-discovery = "0.5.0"
 panic-itm = "0.4.2"
 panic-halt = "*"
+panic-semihosting = "0.6.0"
 switch-hal = "0.4.0"
