Experiments with KanbanDPE related OpenOCD server log files 20250914 1710CET SDvW

--- a/openocd/openocd.cfg
+++ b/openocd/openocd.cfg
@@ -1,2 +1,14 @@
+# 20250912 1314CET SDvW
+# Adapted for specifically STM32F303DISCOVERY board.
+
 source [find interface/stlink.cfg]
 source [find target/stm32f3x.cfg]
+
+adapter speed 950
+
+stm32f3x.cpu configure -event examine-start { adapter speed 950 }
+stm32f3x.cpu configure -event reset-start { adapter speed 950 }
+stm32f3x.cpu configure -event reset-end { adapter speed 950 }
+# 20250912 1508CET SDvW, the following commented out line, didn't work.
+# stm32f3x.cpu configure -event gdb-attach { adapter speed 4000 }
+stm32f3x.cpu configure -event gdb-detach { adapter speed 950 }
