Building a compass, line by line. Main goal is exactly knowing what's going on inside the PCB 20250919 1429CET SDvW

--- a/openocd/openocd.cfg
+++ b/openocd/openocd.cfg
@@ -10,5 +10,37 @@ stm32f3x.cpu configure -event examine-start { adapter speed 950 }
 stm32f3x.cpu configure -event reset-start { adapter speed 950 }
 stm32f3x.cpu configure -event reset-end { adapter speed 950 }
 # 20250912 1508CET SDvW, the following commented out line, didn't work.
-# stm32f3x.cpu configure -event gdb-attach { adapter speed 4000 }
+stm32f3x.cpu configure -event gdb-attach { adapter speed 4000 }
 stm32f3x.cpu configure -event gdb-detach { adapter speed 950 }
+
+# source [find interface/stlink.cfg]
+# # Set a safe, low speed for initial communication
+# adapter speed 950
+
+# source [find target/stm32f3x.cfg]
+
+# # Configure events
+# stm32f3x.cpu configure -event examine-start {
+#     echo "Starting examination..."
+#     adapter speed 400
+# }
+
+# stm32f3x.cpu configure -event reset-start {
+#     echo "Reset started..."
+#     adapter speed 950
+# }
+
+# stm32f3x.cpu configure -event reset-end {
+#     echo "Reset ended..."
+#     adapter speed 950
+# }
+
+# stm32f3x.cpu configure -event gdb-detach {
+#     echo "GDB detached..."
+#     adapter speed 950
+# }
+
+# # Add a manual reset halt attempt after target setup
+# init
+# reset halt
+# echo "CPU halted after reset. Examination complete."
