--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2024"
 [dependencies]
 cortex-m = "0.6.4"
 cortex-m-rt = "0.6.14"
+cortex-m-semihosting = "0.5.0"
 stm32f3-discovery = "0.5.0"
+stm32f3xx-hal = { version = "0.6.1", features = ["stm32f303xc"] }
 panic-itm = "0.4.2"
 panic-halt = "*"
 panic-semihosting = "0.6.0"
