--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ path = "src/main.rs"
 
 [lib]
 name = "compass_trail"
-path = "src/lib.rs"
+path = "src/compass_trail.rs"
 
 [dependencies]
 cortex-m = "0.6.4"
